<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/birthday_unknown"
            android:textColor="@color/egg_shell"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/house"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/house_unknown"
            android:textColor="@color/egg_shell"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/age"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/patronus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/patronus_unknown"
            android:textColor="@color/egg_shell"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/house"
            app:layout_constraintTop_toBottomOf="@+id/house" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/additional_details_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/gender_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/egg_shell"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/species"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/species_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/egg_shell"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ancestry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ancestry"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ancestry_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/egg_shell"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/eye_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/eye_colour"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/eye_colour_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/egg_shell"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hair_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hair_colour"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hair_colour_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/egg_shell"
                android:textSize="17sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/actor"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/actor_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/egg_shell"
                android:textSize="17sp"
                android:visibility="gone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wand_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/wand_image"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/wand_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/wood"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/wand_image"
                    app:layout_constraintTop_toTopOf="@+id/wand_image" />

                <TextView
                    android:id="@+id/wood_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/egg_shell"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/wood"
                    app:layout_constraintTop_toTopOf="@+id/wood" />

                <TextView
                    android:id="@+id/core"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/core"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/wood"
                    app:layout_constraintTop_toBottomOf="@+id/wood" />

                <TextView
                    android:id="@+id/core_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/egg_shell"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/core"
                    app:layout_constraintTop_toTopOf="@+id/core" />

                <TextView
                    android:id="@+id/length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/core"
                    app:layout_constraintTop_toBottomOf="@+id/core" />

                <TextView
                    android:id="@+id/length_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/egg_shell"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/length"
                    app:layout_constraintTop_toTopOf="@+id/length" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>